# python-saol

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  download_saol_facsimile.py  parse_saol_facsimile.py  pyproject.toml
.github/workflows/: release.yml
src/saol/: __init__.py  lookup.py  types.py
